# SimpleServer

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
Config/: Default.json  Files.json
Source/: CMakeLists.txt  Client.cc  Client.hh  Config.cc  Config.hh  Listener.cc  Listener.hh  Main.cc  Server.cc  Server.hh  Socket.cc  Socket.hh  jsoncpp.cc
Source/http/: CMakeLists.txt  Request.cc  Request.hh  Response.cc  Response.hh
Source/methods/: CMakeLists.txt  Get.cc  Get.hh
tests/: CMakeLists.txt  Listener.cc  Socket.cc
